Revision history for Perl module WWW::YouTube::Download

{{$NEXT}}

0.63      2020-06-23 21:13:51Z
    - Find url in a new way (GH#56) (Roy Storey)

0.62      2019-10-10 12:59:04Z
    - Remove Build.PL. Fixes #53 (GH#54) (Olaf Alders)

0.61      2019-10-09 01:48:27Z
    - Document that youtube-playlists is currently broken (GH#52) (Olaf Alders)
    - Add progress bar display with Term::ProgressBar. (GH#10 and GH#50) (Ryo
      Okamoto and Mohammad S Anwar)
    - Fix typo (GH#48) (Alexandr Ciornii)
    - use JSON::MaybeXS instead of JSON (GH#43) (Dan Book)

0.60 2018-07-10T20:08:49Z
    - Fix regexp warning with perl 5.28 GH#42 (gregor herrmann)

0.59 2016-06-23T16:07:09Z
    - Fixed test failures (B. Estrade)

0.58 2015-06-17T22:29:38Z
    - Added a user-agent override switch (isync)

0.57 2015-03-15T02:29:02Z
    - Updated signature decoding function (kucharskim++)
    - Fixed parsing of 'user' (isync++)
    - Added an "interactive" mode (switch -a/ --interactive) (isync++)
    - Fixed JSON parser error (tsibley++)
    - Fixed failure if signature not found (tsibley++)

0.56 2013-07-30T07:14:40Z
    - Fixed typo: $Carp::Intrenal -> $Carp::Internal (Syaltut++)
    - Changes file reformatted as per CPAN::Changes::Spec (neilbowers++)

0.55 2013-07-27T09:21:38Z
    - Changed signature encoding (kucharskim++)

0.54 2013-07-05T18:29:31Z
    - If unavailable video, croak with an appropriate error message.
      (kucharskim++)
    - Support encrypted signature video. (kucharskim++)

0.53 2013-06-05T16:05:56Z
    - Various improvements to youtube-playlists (kucharskim++)

0.52 2013-05-05T16:18:54Z
    - Added playlist_id() and video_id() method (kucharskim++)

0.51 2013-05-03T07:49:29Z
    - Support new url (mikolaj++)

0.50 2013-04-19T17:50:39Z
    - repackaging

0.49 2013-04-09T21:13:56Z
    - repacking

0.48 2013-04-09T21:09:55Z
    - Fixed parsing problem on youtube-playlists (mikolaj++)

0.47 2013-04-02 02:06:07