@@ -13,8 +13,6 @@ requires "Pod::Usage" => "0";
 requires "Term::ANSIColor" => "0";
 requires "Time::HiRes" => "0";
 requires "URI" => "0";
-requires "URI::QueryParam" => "0";
-requires "XML::TreePP" => "0";
 requires "constant" => "0";
 requires "perl" => "5.008001";
 requires "strict" => "0";
