@@ -1,6 +1,7 @@
 Revision history for Perl module WWW::YouTube::Download
 
 {{$NEXT}}
+    - Get youtube-playlists working again. (GH#60, fixes GH#40) (isync)
 
 0.63      2020-06-23 21:13:51Z
     - Find url in a new way (GH#56) (Roy Storey)
